--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ baseurl:               ''
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang:                  en
+lang:                  kr
 
 # The title of your blog. Used in the sidebar and the browser tab.
 title:                 미치삶
@@ -97,10 +97,10 @@ font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
 
 hydejack:
   # Configure the order of complementary content on blog posts
-  post_addons:         [about, newsletter, related]
+  # post_addons:         [about, newsletter, related]
 
   # Configure the order of complementary content on project pages
-  project_addons:      [about, newsletter, other]
+  # project_addons:      [about, newsletter, other]
 
   # If you do not use Google Fonts, set to `true`.
   no_google_fonts:     false
@@ -165,7 +165,7 @@ exclude:
 
 plugins:
   - jekyll-avatar
-  - jekyll-default-layout
+  #- jekyll-default-layout
   - jekyll-feed
   - jekyll-gist
   - jekyll-optional-front-matter
