--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   # twitter:             <username>
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2017. by michisarm.
+copyright:             © 2017. by michisarm
 
 # Format of the permalinks
 permalink:             pretty
