--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    test about
+    여행, 먹을것, 먹으러가는 여행을 좋아합니다.
 
   # This photo will be used in the about section.
   picture:
